# agentic-rag

./: .dockerignore  .gitignore  README.md  REVAMP_PLAN.md  docker-compose.yml
.github/workflows/: ci.yml  nightly-eval.yml
backend/: .env.example  Dockerfile  mcp_server.py  pyproject.toml  requirements.txt
backend/app/: cache.py  main.py  models.py  observability.py  sse.py
backend/app/adapters/: llm.py  vectorstore.py  websearch.py
backend/app/agent/: budget.py  deps.py  errors.py  events.py  graph.py  render.py  runtime.py  schemas.py  segment.py  state.py  tools.py
backend/app/agent/nodes/: __init__.py  approve.py  finalize.py  grade.py  intake.py  plan.py  retrieve.py  rewrite.py  synthesize.py  verify.py
backend/app/api/routes/: health.py  ingest.py  query.py  research.py  threads.py
backend/app/core/: config.py
backend/app/eval/: __init__.py  datasets.py  fixtures.py  harness.py  metrics.py
backend/app/prompts/: grade.md  intake.md  plan.md  registry.py  rewrite.md  synthesize.md  verify.md
backend/app/retrieval/: bm25.py  chunking.py  fusion.py  index.py
backend/app/security/: access.py  sanitize.py
backend/app/services/: agent.py  embeddings.py  ingest.py  lexical_index.py  llm.py  pinecone_client.py  retrieval.py  text_splitter.py
backend/backend/data/: lexical_index.jsonl
backend/scripts/: build_chunks.py  build_eval_fixtures.py  ragas_eval.py  run_generation_eval.py  run_retrieval_eval.py  seed_corpus.py
backend/tests/unit/: conftest.py  test_access.py  test_bm25.py  test_budget.py  test_chunking.py  test_eval_metrics.py  test_finalize.py  test_fusion.py  test_graph_routing.py  test_hitl.py  test_observability.py  test_prompts.py  test_sanitize.py  test_segment.py  test_sse.py  test_verify.py  test_web_retrieve.py  test_websearch.py
data/corpus/: ai_research_corpus.json
data/eval/: ai_research_eval.jsonl  golden_generation.jsonl  golden_retrieval.jsonl
data/index/: chunks.jsonl
data/sample/: overview.md  product-brief.md  tech-notes.md
docs/: EVALS.md  SECURITY.md
frontend/: .env.example  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/: AgentTimeline.tsx  AnswerPane.tsx  ApproveModal.tsx  CTASection.tsx  ClaimAuditTable.tsx  EvidenceDrawer.tsx  QueryBar.tsx  UsageMeter.tsx  hero-dithering-card.tsx
frontend/src/hooks/: useHcaptcha.ts  useResearch.ts
frontend/src/lib/: api.ts  markdown.tsx  researchReducer.ts  sse.ts  types.ts
