[project]
name = "loupe"
version = "0.2.0"
description = "Loupe — a deep-research agent that shows its work."
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.31",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "google-genai>=1.0,<2",
    "pinecone>=5.1,<6",
    "numpy>=1.26,<3",
    "httpx>=0.27,<0.28",
    "rank-bm25>=0.2.2,<0.3",
    "langgraph>=0.4,<0.5",
    "langgraph-checkpoint-sqlite>=2.0,<3",
    "sse-starlette>=2.1,<3",
    "tavily-python>=0.5,<1",
    "trafilatura>=1.12,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<0.7",
    "pyright>=1.1.380,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-socket>=0.7,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["app"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Block external network, but allow the loopback socket asyncio's event loop needs.
addopts = "--disable-socket --allow-hosts=127.0.0.1,::1"
testpaths = ["tests"]
pythonpath = ["."]
